--- a/NovoTeX/BodyMatter/1r/AlgebraLineal.tex
+++ b/NovoTeX/BodyMatter/1r/AlgebraLineal.tex
@@ -1,4 +1,4 @@
-\documentclass[../Apunts.tex]{subfiles}
+\documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
 \part{Àlgebra lineal}
@@ -275,7 +275,7 @@
 		\label{prop:el producte de matrius invertibles és invertible}
 		Siguin \(A\) i \(B\) dues matrius invertibles d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores la matriu \(AB\) és invertible.
 		\begin{proof}
-			Per la proposició \myref{prop:associativitat producte de matrius} i la definició de \myref{def:matriu invertible} tenim que
+			Per la proposició \ref{prop:associativitat producte de matrius} i la definició de \myref{def:matriu invertible} tenim que
 			\[(AB)(B^{-1}A^{-1})=\Id\quad\text{i}\quad(B^{-1}A^{-1})(AB)=\Id,\]
 			i de nou per la definició tenim que \(AB\) és invertible.
 		\end{proof}
@@ -968,7 +968,5 @@
 %\section{Forma canònica racional}
 %
 %\chapter{Espais vectorials euclidians}
-
- % Àlgebra multilineal?
 
 \end{document}
