--- a/NovoTeX/BodyMatter/3r/EDOS2.tex
+++ b/NovoTeX/BodyMatter/3r/EDOS2.tex
@@ -1,4 +1,4 @@
-\documentclass[../Apunts.tex]{subfiles}
+\documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
 \part{Equacions diferencials ordinàries \rom{2}}
@@ -198,5 +198,4 @@
 		o la llei de la conservació escalar
 		\[\frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.\]
 	\end{example}
-	
 \end{document} 
